<resources>
    <string name="app_name">Курск 1943</string>
    <string name="common_info">\n    В программе представлен ход советско-немецкого сражения на Курской дуге в июле 1943 года на Обоянском (южном) направлении ( Прохоровка ).
\n   Он базируется, в основном, на книгах Замулина В.Н.
\n1. Курский излом: Решающая битва Отечественной войны. М.: Яуза, Эксмо, 2007.
\n2. Засекреченная Курская битва. М.: Яуза, Эксмо, 2007.
\n3. Забытое Сражение Курской дуги, М.: Яуза, Эксмо, 2009.
\n\n  Карты, на которых отображен ход сражений - современные, дополненные старыми названиями населенных пунктов,
а также, по возможности, ключевыми географическими точками из текста и из иллюстраций книг Замулина.
\n  Условные обозначения для частей и соединений смотрите в разделе "Условные обозначения". Они не вполне соответствуют стандартам, хотя и сделаны по их мотивам.
\nПримечание:
Изучайте или пользуйтесь программой, как "живой" иллюстрацией к книгам Замулина В.Н.
Объем материала у Замулина В.Н. так велик и богат, что мне очень захотелось, вдобавок к тем маленьким, подчас с неизвестным масштабом картам, что приведены в его книгах, самому нарисовать и увидеть картину хода сражения максимально наглядно и в развитии.
\n\n    Мой исходный сайт (2013 год) - ovoine.ru"
\nСтепной Владимир
\n©Степной В.Н., 2013-2021
</string>
    <string name="kaosnsokr">ВФ - Воронежский фронт     СФ - Степной фронт (военный округ) \nЮЗФ - Юго-Западный фронт
        \nА - общевойсковая армия     ТА  -  танковая армия
\n  Отдельные числа: 1 – 1-я танковая армия         5 – 5-я гвардейская танковая армия
        \n69 – 69-я армия                       6 или 7 – 6-я или 7-я гвардейская армия
\nСК - стрелковый корпус   ТК - танковый корпус   МК - мехкорпус
\nсд - стрелковая дивизия сп - стрелковый полк
\nтбр - танковая бригада тп - танковый полк ап - артиллерийский полк
        \nсап - самоходно-артиллерийский полк
\nпабр - противоартиллерийская бригада   \nпап - противоартиллерийский полк
\nиптабр - истребительно-противотанковая артиллерийская бригада   \nиптап - истребительно-противотанковый артиллерийский полк
\nмбр (в кружке) - минометная бригада   мп - минометный полк
\nмбр (в прямоугольнике) или мсбр - мотострелковая бригада
        \n  Расширения:
\nБуква \"г\" или \"Г\" перед основным сокращением - гвардия, например, 89 гсд - 89-я гвардейская стрелковая дивизия.
        \nМогут быть проблемы с названиями частей, начинающихся с \"г\" (гаубичный артиллерийский полк - гвардейский артиллерийский полк), но пока на карте встречаются только гвардейские части и соединения.
\nБуква \"о\" перед сокращением - отдельный(ая), например, 230 отп - 230-й отдельный танковый полк.
\nБуква \"т\" перед сокращением - тяжелый(ая), например 1529 тсап - 1529-й тяжелый самоходно-артиллерийский полк.</string>
    <string name="txt_tv_kol">Значки, отображающие приблизительный состав частей и соединений (внутри условных обозначений):</string>
    <string name="naosnsokr">ГА Юг – группа армий \“Юг\”
\n4 ТА – 4-я танковая армия    ОГ Кемпф – объединенная группа ”Кемпф”
\nАК – армейский корпус         ТК – танковый корпус
\nпд – пехотная дивизия         тд – танковая дивизия    \nмтгд – мотогренадерная дивизия
\nотбат – отдельный танковый батальон                 тбр – танковая бригада
\nодшо – отдельный дивизион штурмовых орудий
    </string>
    <string name="tempty"> </string>
    <string name="tnul">0</string>
    <string name="t_loadcart">Загрузка карт</string>
    <string name="t_sizeflesh">Размер флеш</string>
    <string name="tfreeflash">Свободно</string>
    <string name="tnugno">Нужно (менее)</string>
    <string name="t_ost">Останется</string>
    <string name="info1">Для работы программы необходимо скачать карты,\n размещенные на Githab.com</string>
    <string name="info2">Время скачивания зависит от скорости работы \nВашего интернет-канала</string>
    <string name="info3">Редко время скачивания превышает 10 минут,\n на скорости 40Mbit/sek качалось 4,5 минуты</string>
    <string name="info4">Нажав \'Старт\', начните закачку.\n Вы сможете прервать закачку, продолжив позднее</string>
    <string name="btstart">Старт</string>
</resources>